# nepali-language-cpp-utilities

./: .gitignore  CMakeLists.txt  README.md  build_image_and_run.sh  build_lib.sh
.github/workflows/: cmake.yml
conan/: conanfile.txt
include/: detail.h  nepaliunicode.h
scripts/: Dockerfile
src/: BUILD  detail.cpp  nepaliunicode.cpp  nepaliunicode.h
test/: CMakeLists.txt  common.h  nepaliunicode.test.cpp
